--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-image: radial-gradient(white, black);
+  background-image: repeating-radial-gradient(white, black 25%, white 50%);
 }
 
 .garden {
