playing with ball

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,10 +7,10 @@ html, body {
 
 .garden {
   position: relative;
-  width : 200px;
-  height: 200px;
-  border: 5px solid #CCC;
-  border-radius: 10px;
+  width : 100%;
+  height: 100%;
+  /*border: 5px solid #CCC;
+  border-radius: 10px;*/
 }
 
 .ball {
