--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,4 @@
-/*html, body {
-  width: 100%;
-  height: 100%;
-  background-image: repeating-radial-gradient(white, black 25%, white 50%);
-  font-size: 50px;
-}*/
+
 
 .garden {
   position: relative;
@@ -29,11 +24,13 @@
 html, body {
   position: relative;
   height: 100%;
+
+  font-size: 50px;
 }
 body {
-  background: #eee;
+  background-image: repeating-radial-gradient(white, #cc5500 25%, white 50%);
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+
   color:#000;
   margin: 0;
   padding: 0;
@@ -41,6 +38,7 @@ body {
 .swiper-container {
   width: 100%;
   height: 100%;
+  opacity:0.5;
 }
 .swiper-slide {
   text-align: center;
