--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ html, body {
   position: relative;
   height: 100%;
 
-  font-size: 50px;
+  font-size: 12em;
 }
 body {
   background-image: repeating-radial-gradient(white, #cc5500 25%, white 50%);
@@ -42,7 +42,7 @@ body {
 }
 .swiper-slide {
   text-align: center;
-  font-size: 18px;
+  font-size: 12em;
   background: #fff;
   /* Center slide text vertically */
   display: -webkit-box;
